# mrsbot

./: .gitignore  Cargo.toml
.cargo/: config.toml
cfg/: test.toml
cfg/mw/: all.toml  s1.toml  s4.toml  s5.toml  s8.toml
release/: libmrsbot.rlib  test.toml
release/cfg/: default.toml
release/cfg/mw/: s1.toml  s2.toml  s3.toml  s6.toml  s7.toml
src/: cfg.rs  config.rs  consts.rs  deadlock.rs  handler.rs  lib.rs  main.rs  main_small.rs  types.rs
src/chat/: mod.rs
src/events/: disconnect.rs  init.rs  login.rs  spawn.rs  tick.rs
src/events/chat/: parser.rs
src/events/packet/: parser.rs
