[package]
name = "mrsbot"
version = "0.1.3"
edition = "2024"

[dependencies]
toml = "0.8.20"
anyhow = "1.0.97"
regex = "1.11.1"
lazy_static = "1.5.0"
sysx = { git = "https://github.com/lyric228/sysx" }
azalea = { git = "https://github.com/azalea-rs/azalea" }
azalea-viaversion = { git = "https://github.com/azalea-rs/azalea-viaversion" }

[dependencies.serde]
version = "1.0.219"
features = ["derive"]

[dependencies.tokio]
version = "1.44.2"
features = ["full"]

[dependencies.parking_lot]
version = "0.12.3"
features = ["nightly", "deadlock_detection"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
